Login Gmail with firebase

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
      https://firebase.google.com/docs/web/setup#available-libraries -->
   <script src="https://www.gstatic.com/firebasejs/7.19.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.19.0/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.19.0/firebase-firestore.js"></script>
 
   <script>
     // Your web app's Firebase configuration
@@ -35,7 +36,7 @@
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
-
+    const fs = firebase.firestore();
     firebase.analytics();
   </script>
   <script type="module" src="main.js"></script>
